Update build + added local db volume binding to prevent loss of data