@@ -1,12 +1,14 @@
 plugins {
-    id("io.micronaut.application") version "$micronautVersion"
+
+
+    id("io.micronaut.application") version "$micronautGradlePluginVersion"
     // states which micronaut version to use, as well as its transitive dependencies
-    id("io.micronaut.aot") version "$micronautVersion"
+    id("io.micronaut.aot") version "$micronautGradlePluginVersion"
     id("org.sonarqube") version "4.4.1.3373"
     id("jacoco")
     id("checkstyle")
-    id("com.github.johnrengelman.shadow") version "8.1.1"
-    id("com.github.ben-manes.versions") version "0.51.0"
+    id("com.gradleup.shadow") version "8.3.9"
+    id("com.github.ben-manes.versions") version "0.53.0"
 }
 
 //set the project version for datadog versioning
@@ -48,7 +50,7 @@ micronaut {
 }
 
 dependencies {
-    annotationProcessor("org.projectlombok:lombok")
+    annotationProcessor("org.projectlombok:lombok:$lombokVersion")
     annotationProcessor("io.micronaut.data:micronaut-data-processor")
     annotationProcessor("org.mapstruct:mapstruct-processor:$mapstructVersion")
     annotationProcessor("io.micronaut:micronaut-http-validation")
@@ -102,7 +104,7 @@ dependencies {
     runtimeOnly("net.logstash.logback:logstash-logback-encoder:$logstashLogbackEncoderVersion")
     runtimeOnly("org.postgresql:postgresql:$postgresVersion")
 
-    compileOnly("org.projectlombok:lombok")
+    compileOnly("org.projectlombok:lombok:$lombokVersion")
 
     implementation("io.micronaut.cache:micronaut-cache-core")
     implementation("io.micronaut:micronaut-http-client")
@@ -127,13 +129,23 @@ dependencies {
     testImplementation("org.mockito:mockito-all:$mockitoAllVersion")
 }
 
+
+
+// java.lang.IllegalStateException
+// Byte Buddy could not instrument all classes within the mock's type hierarchy
+// Caused by: Java 25 (69) not supported by the current version of Byte Buddy which officially supports Java 24 (68)
+tasks.withType(Test).configureEach {
+    jvmArgs '-Dnet.bytebuddy.experimental=true', '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
+}
+
+
 application {
     mainClass.set("com.cabinparser.Application")
 }
 
 java {
-    sourceCompatibility = JavaVersion.toVersion("21")
-    targetCompatibility = JavaVersion.toVersion("21")
+    sourceCompatibility = JavaVersion.toVersion("25")
+    targetCompatibility = JavaVersion.toVersion("25")
 }
 
 compileJava {
